grammar.js
    ident: $ =>
      regexseq(
        regexoptional(/[\\]/),
        /[\u0023-$'.?A-Z^-z~]/,
        regexrepeat(regexchoice(/[\u0023-$'.?A-Z^-z~]/, /[0-9]/))
      ),
    /*
     * boogie.ebnf:133
     * bvlit ::=  [0-9] [0-9]* [b] [v] [0-9] [0-9]*
     */
    bvlit: $ =>
      regexseq(/[0-9]/, regexrepeat(/[0-9]/), /[b]/, /[v]/, /[0-9]/, regexrepeat(/[0-9]/)),
    /*
     * boogie.ebnf:134
     * digits ::=  [0-9] [0-9]*
     */
    digits: $ =>
      regexseq(/[0-9]/, regexrepeat(/[0-9]/)),
    /*
     * boogie.ebnf:135
     * string ::=  ["] ( [\u0000-\u0009\u000b-\u000c\u000e-!\u0023-\uffff] | [\\] ["] )* ["]
     */
    string: $ =>
      regexseq(
        /["]/,
        regexrepeat(regexchoice(/[\u0000-\u0009\u000b-\u000c\u000e-!\u0023-\uffff]/, regexseq(/[\\]/, /["]/))),
        /["]/
      ),
    /*
     * boogie.ebnf:136
     * decimal ::=  [0-9] [0-9]* [e] [-]? [0-9] [0-9]*
     */
