test/corpus/basil.txt
===
basil/src/test/correct/syscall//clang//syscall_gtirb_DSAMemoryRegionSystemTestsGTIRB.bpl
===

var {:extern} Gamma_R0: bool;
var {:extern} stack_5: [bv64]bv8;
const {:extern} $_IO_stdin_used_addr: bv64;
axiom ($_IO_stdin_used_addr == 1944bv64);
function {:extern} L(index: bv64) returns (bool) {
  false
}

function {:extern} {:bvbuiltin "bvadd"} bvadd64(bv64, bv64) returns (bv64);
function {:extern} gamma_load32(gammaMap: [bv64]bool, index: bv64) returns (bool) {
  (gammaMap[bvadd64(index, 3bv64)] && (gammaMap[bvadd64(index, 2bv64)] && (gammaMap[bvadd64(index, 1bv64)] && gammaMap[index])))
}

function {:extern} gamma_load64(gammaMap: [bv64]bool, index: bv64) returns (bool) {
  (gammaMap[bvadd64(index, 7bv64)] && (gammaMap[bvadd64(index, 6bv64)] && (gammaMap[bvadd64(index, 5bv64)] && (gammaMap[bvadd64(index, 4bv64)] && (gammaMap[bvadd64(index, 3bv64)] && (gammaMap[bvadd64(index, 2bv64)] && (gammaMap[bvadd64(index, 1bv64)] && gammaMap[index])))))))
}

function {:extern} gamma_store32(gammaMap: [bv64]bool, index: bv64, value: bool) returns ([bv64]bool) {
  gammaMap[index := value][bvadd64(index, 1bv64) := value][bvadd64(index, 2bv64) := value][bvadd64(index, 3bv64) := value]
}

function {:extern} gamma_store64(gammaMap: [bv64]bool, index: bv64, value: bool) returns ([bv64]bool) {
  gammaMap[index := value][bvadd64(index, 1bv64) := value][bvadd64(index, 2bv64) := value][bvadd64(index, 3bv64) := value][bvadd64(index, 4bv64) := value][bvadd64(index, 5bv64) := value][bvadd64(index, 6bv64) := value][bvadd64(index, 7bv64) := value]
}

function {:extern} memory_load32_le(memory: [bv64]bv8, index: bv64) returns (bv32) {
  (memory[bvadd64(index, 3bv64)] ++ (memory[bvadd64(index, 2bv64)] ++ (memory[bvadd64(index, 1bv64)] ++ memory[index])))
}

function {:extern} memory_load64_le(memory: [bv64]bv8, index: bv64) returns (bv64) {
  (memory[bvadd64(index, 7bv64)] ++ (memory[bvadd64(index, 6bv64)] ++ (memory[bvadd64(index, 5bv64)] ++ (memory[bvadd64(index, 4bv64)] ++ (memory[bvadd64(index, 3bv64)] ++ (memory[bvadd64(index, 2bv64)] ++ (memory[bvadd64(index, 1bv64)] ++ memory[index])))))))
}

function {:extern} memory_store32_le(memory: [bv64]bv8, index: bv64, value: bv32) returns ([bv64]bv8) {
  memory[index := value[8:0]][bvadd64(index, 1bv64) := value[16:8]][bvadd64(index, 2bv64) := value[24:16]][bvadd64(index, 3bv64) := value[32:24]]
}

function {:extern} memory_store64_le(memory: [bv64]bv8, index: bv64, value: bv64) returns ([bv64]bv8) {
  memory[index := value[8:0]][bvadd64(index, 1bv64) := value[16:8]][bvadd64(index, 2bv64) := value[24:16]][bvadd64(index, 3bv64) := value[32:24]][bvadd64(index, 4bv64) := value[40:32]][bvadd64(index, 5bv64) := value[48:40]][bvadd64(index, 6bv64) := value[56:48]][bvadd64(index, 7bv64) := value[64:56]]
}

function {:extern} {:bvbuiltin "zero_extend 32"} zero_extend32_32(bv32) returns (bv64);
procedure {:extern} rely();
  modifies Gamma_mem_1, Gamma_mem_2, Gamma_mem_3, Gamma_mem_4, mem_1, mem_2, mem_3, mem_4;
  ensures (Gamma_mem_1 == old(Gamma_mem_1));
  ensures (Gamma_mem_2 == old(Gamma_mem_2));
  ensures (Gamma_mem_3 == old(Gamma_mem_3));
  ensures (Gamma_mem_4 == old(Gamma_mem_4));
  ensures (mem_1 == old(mem_1));
  ensures (mem_2 == old(mem_2));
  ensures (mem_3 == old(mem_3));
  ensures (mem_4 == old(mem_4));

procedure {:extern} rely_transitive();
  modifies Gamma_mem_1, Gamma_mem_2, Gamma_mem_3, Gamma_mem_4, mem_1, mem_2, mem_3, mem_4;
  ensures (Gamma_mem_1 == old(Gamma_mem_1));
  ensures (Gamma_mem_2 == old(Gamma_mem_2));
  ensures (Gamma_mem_3 == old(Gamma_mem_3));
  ensures (Gamma_mem_4 == old(Gamma_mem_4));
  ensures (mem_1 == old(mem_1));
  ensures (mem_2 == old(mem_2));
  ensures (mem_3 == old(mem_3));
  ensures (mem_4 == old(mem_4));

implementation {:extern} rely_transitive()
{
  call rely();
  call rely();
}

procedure {:extern} rely_reflexive();

procedure {:extern} guarantee_reflexive();
  modifies Gamma_mem_1, Gamma_mem_2, Gamma_mem_3, Gamma_mem_4, mem_1, mem_2, mem_3, mem_4;

procedure main_1876();
  modifies Gamma_R0, Gamma_R16, Gamma_R17, Gamma_R29, Gamma_R30, Gamma_R31, Gamma_mem_1, Gamma_mem_2, Gamma_mem_3, Gamma_mem_4, Gamma_stack_1, Gamma_stack_2, Gamma_stack_3, Gamma_stack_4, Gamma_stack_5, R0, R16, R17, R29, R30, R31, mem_1, mem_2, mem_3, mem_4, stack_1, stack_2, stack_3, stack_4, stack_5;
  free requires (memory_load64_le(mem_4, 69648bv64) == 1488bv64);
  free ensures (Gamma_R29 == old(Gamma_R29));
  free ensures (Gamma_R31 == old(Gamma_R31));
  free ensures (R29 == old(R29));
  free ensures (R31 == old(R31));

implementation main_1876()
{
  main_1876__0__NmHi4RAWSYmKU32HkJ0NXQ:
    assume {:captureState "main_1876__0__NmHi4RAWSYmKU32HkJ0NXQ"} true;
    goto FUN_610_1552__0__3ABOOETYTria~jSyU9mmbQ_165;
  FUN_610_1552__0__3ABOOETYTria~jSyU9mmbQ_165:
    assume {:captureState "FUN_610_1552__0__3ABOOETYTria~jSyU9mmbQ_165"} true;
    R16, Gamma_R16 := 69632bv64, true;
    call rely();
    load23, Gamma_load23 := memory_load64_le(mem_4, bvadd64(R16, 16bv64)), (gamma_load64(Gamma_mem_4, bvadd64(R16, 16bv64)) || L(bvadd64(R16, 16bv64)));
    R17, Gamma_R17 := load23, Gamma_load23;
    R16, Gamma_R16 := bvadd64(R16, 16bv64), Gamma_R16;
    call fork();
    goto FUN_610_1552_basil_return_166;
  FUN_610_1552_basil_return_166:
    assume {:captureState "FUN_610_1552_basil_return_166"} true;
    goto main_1876__0__NmHi4RAWSYmKU32HkJ0NXQ_inlineret;
  main_1876__0__NmHi4RAWSYmKU32HkJ0NXQ_inlineret:
    assume {:captureState "main_1876__0__NmHi4RAWSYmKU32HkJ0NXQ_inlineret"} true;
    goto main_1876__1__ttg35E3ATxG9q5C2p8wnzQ;
  main_1876__1__ttg35E3ATxG9q5C2p8wnzQ:
    assume {:captureState "main_1876__1__ttg35E3ATxG9q5C2p8wnzQ"} true;
    call rely();
    goto main_1876_basil_return;
  main_1876_basil_return:
    assume {:captureState "main_1876_basil_return"} true;
    return;
}

procedure fork();
---

(BoogiePL
  (GlobalVars
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (IdsTypeWheres
      (Idents
        (Ident
          (ident)))
      (Type
        (TypeAtom))))
  (GlobalVars
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (IdsTypeWheres
      (Idents
        (Ident
          (ident)))
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (Ident
              (ident)))))))
  (Consts
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (IdsType
      (Idents
        (Ident
          (ident)))
      (Type
        (Ident
          (ident)))))
  (Axiom
    (Proposition
      (AtomExpression
        (RelationalExpression
          (AtomExpression
            (Ident
              (ident)))
          (RelOp)
          (AtomExpression
            (BvLit
              (bvlit)))))))
  (Function
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (Ident
      (ident))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (TypeAtom)))
    (AtomExpression))
  (Function
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))
        (AttributeParameter
          (AtomExpression
            (string)))))
    (Ident
      (ident))
    (VarOrType
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (Ident
          (ident)))))
  (Function
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (Ident
      (ident))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (TypeAtom)))))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (TypeAtom)))
    (AtomExpression
      (LogicalExpression
        (ArrayExpression
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (Ident
              (ident))
            (Expressions
              (AtomExpression
                (Ident
                  (ident)))
              (AtomExpression
                (BvLit
                  (bvlit))))))
        (AndOp)
        (AtomExpression
          (LogicalExpression
            (ArrayExpression
              (AtomExpression
                (Ident
                  (ident)))
              (AtomExpression
                (Ident
                  (ident))
                (Expressions
                  (AtomExpression
                    (Ident
                      (ident)))
                  (AtomExpression
                    (BvLit
                      (bvlit))))))
            (AndOp)
            (AtomExpression
              (LogicalExpression
                (ArrayExpression
                  (AtomExpression
                    (Ident
                      (ident)))
                  (AtomExpression
                    (Ident
                      (ident))
                    (Expressions
                      (AtomExpression
                        (Ident
                          (ident)))
                      (AtomExpression
                        (BvLit
                          (bvlit))))))
                (AndOp)
                (ArrayExpression
                  (AtomExpression
                    (Ident
                      (ident)))
                  (AtomExpression
                    (Ident
                      (ident)))))))))))
  (Function
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (Ident
      (ident))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (TypeAtom)))))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (TypeAtom)))
    (AtomExpression
      (LogicalExpression
        (ArrayExpression
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (Ident
              (ident))
            (Expressions
              (AtomExpression
                (Ident
                  (ident)))
              (AtomExpression
                (BvLit
                  (bvlit))))))
        (AndOp)
        (AtomExpression
          (LogicalExpression
            (ArrayExpression
              (AtomExpression
                (Ident
                  (ident)))
              (AtomExpression
                (Ident
                  (ident))
                (Expressions
                  (AtomExpression
                    (Ident
                      (ident)))
                  (AtomExpression
                    (BvLit
                      (bvlit))))))
            (AndOp)
            (AtomExpression
              (LogicalExpression
                (ArrayExpression
                  (AtomExpression
                    (Ident
                      (ident)))
                  (AtomExpression
                    (Ident
                      (ident))
                    (Expressions
                      (AtomExpression
                        (Ident
                          (ident)))
                      (AtomExpression
                        (BvLit
                          (bvlit))))))
                (AndOp)
                (AtomExpression
                  (LogicalExpression
                    (ArrayExpression
                      (AtomExpression
                        (Ident
                          (ident)))
                      (AtomExpression
                        (Ident
                          (ident))
                        (Expressions
                          (AtomExpression
                            (Ident
                              (ident)))
                          (AtomExpression
                            (BvLit
                              (bvlit))))))
                    (AndOp)
                    (AtomExpression
                      (LogicalExpression
                        (ArrayExpression
                          (AtomExpression
                            (Ident
                              (ident)))
                          (AtomExpression
                            (Ident
                              (ident))
                            (Expressions
                              (AtomExpression
                                (Ident
                                  (ident)))
                              (AtomExpression
                                (BvLit
                                  (bvlit))))))
                        (AndOp)
                        (AtomExpression
                          (LogicalExpression
                            (ArrayExpression
                              (AtomExpression
                                (Ident
                                  (ident)))
                              (AtomExpression
                                (Ident
                                  (ident))
                                (Expressions
                                  (AtomExpression
                                    (Ident
                                      (ident)))
                                  (AtomExpression
                                    (BvLit
                                      (bvlit))))))
                            (AndOp)
                            (AtomExpression
                              (LogicalExpression
                                (ArrayExpression
                                  (AtomExpression
                                    (Ident
                                      (ident)))
                                  (AtomExpression
                                    (Ident
                                      (ident))
                                    (Expressions
                                      (AtomExpression
                                        (Ident
                                          (ident)))
                                      (AtomExpression
                                        (BvLit
                                          (bvlit))))))
                                (AndOp)
                                (ArrayExpression
                                  (AtomExpression
                                    (Ident
                                      (ident)))
                                  (AtomExpression
                                    (Ident
                                      (ident)))))))))))))))))))
  (Function
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (Ident
      (ident))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (TypeAtom)))))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (TypeAtom)))
    (VarOrType
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (TypeAtom)))))
    (ArrayExpression
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (AtomExpression
        (Ident
          (ident)))))
  (Function
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (Ident
      (ident))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (TypeAtom)))))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (TypeAtom)))
    (VarOrType
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (TypeAtom)))))
    (ArrayExpression
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (AtomExpression
        (Ident
          (ident)))))
  (Function
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (Ident
      (ident))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (Ident
              (ident))))))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (Ident
          (ident))))
    (AtomExpression
      (BvTerm
        (ArrayExpression
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (Ident
              (ident))
            (Expressions
              (AtomExpression
                (Ident
                  (ident)))
              (AtomExpression
                (BvLit
                  (bvlit))))))
        (AtomExpression
          (BvTerm
            (ArrayExpression
              (AtomExpression
                (Ident
                  (ident)))
              (AtomExpression
                (Ident
                  (ident))
                (Expressions
                  (AtomExpression
                    (Ident
                      (ident)))
                  (AtomExpression
                    (BvLit
                      (bvlit))))))
            (AtomExpression
              (BvTerm
                (ArrayExpression
                  (AtomExpression
                    (Ident
                      (ident)))
                  (AtomExpression
                    (Ident
                      (ident))
                    (Expressions
                      (AtomExpression
                        (Ident
                          (ident)))
                      (AtomExpression
                        (BvLit
                          (bvlit))))))
                (ArrayExpression
                  (AtomExpression
                    (Ident
                      (ident)))
                  (AtomExpression
                    (Ident
                      (ident)))))))))))
  (Function
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (Ident
      (ident))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (Ident
              (ident))))))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (Ident
          (ident))))
    (AtomExpression
      (BvTerm
        (ArrayExpression
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (Ident
              (ident))
            (Expressions
              (AtomExpression
                (Ident
                  (ident)))
              (AtomExpression
                (BvLit
                  (bvlit))))))
        (AtomExpression
          (BvTerm
            (ArrayExpression
              (AtomExpression
                (Ident
                  (ident)))
              (AtomExpression
                (Ident
                  (ident))
                (Expressions
                  (AtomExpression
                    (Ident
                      (ident)))
                  (AtomExpression
                    (BvLit
                      (bvlit))))))
            (AtomExpression
              (BvTerm
                (ArrayExpression
                  (AtomExpression
                    (Ident
                      (ident)))
                  (AtomExpression
                    (Ident
                      (ident))
                    (Expressions
                      (AtomExpression
                        (Ident
                          (ident)))
                      (AtomExpression
                        (BvLit
                          (bvlit))))))
                (AtomExpression
                  (BvTerm
                    (ArrayExpression
                      (AtomExpression
                        (Ident
                          (ident)))
                      (AtomExpression
                        (Ident
                          (ident))
                        (Expressions
                          (AtomExpression
                            (Ident
                              (ident)))
                          (AtomExpression
                            (BvLit
                              (bvlit))))))
                    (AtomExpression
                      (BvTerm
                        (ArrayExpression
                          (AtomExpression
                            (Ident
                              (ident)))
                          (AtomExpression
                            (Ident
                              (ident))
                            (Expressions
                              (AtomExpression
                                (Ident
                                  (ident)))
                              (AtomExpression
                                (BvLit
                                  (bvlit))))))
                        (AtomExpression
                          (BvTerm
                            (ArrayExpression
                              (AtomExpression
                                (Ident
                                  (ident)))
                              (AtomExpression
                                (Ident
                                  (ident))
                                (Expressions
                                  (AtomExpression
                                    (Ident
                                      (ident)))
                                  (AtomExpression
                                    (BvLit
                                      (bvlit))))))
                            (AtomExpression
                              (BvTerm
                                (ArrayExpression
                                  (AtomExpression
                                    (Ident
                                      (ident)))
                                  (AtomExpression
                                    (Ident
                                      (ident))
                                    (Expressions
                                      (AtomExpression
                                        (Ident
                                          (ident)))
                                      (AtomExpression
                                        (BvLit
                                          (bvlit))))))
                                (ArrayExpression
                                  (AtomExpression
                                    (Ident
                                      (ident)))
                                  (AtomExpression
                                    (Ident
                                      (ident)))))))))))))))))))
  (Function
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (Ident
      (ident))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (Ident
              (ident))))))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (Ident
              (ident))))))
    (ArrayExpression
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident)))
      (ArrayExpression
        (AtomExpression
          (Ident
            (ident)))
        (CoercionExpression
          (AtomExpression
            (Nat
              (digits)))
          (Nat
            (digits))))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (ArrayExpression
        (AtomExpression
          (Ident
            (ident)))
        (CoercionExpression
          (AtomExpression
            (Nat
              (digits)))
          (Nat
            (digits))))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (ArrayExpression
        (AtomExpression
          (Ident
            (ident)))
        (CoercionExpression
          (AtomExpression
            (Nat
              (digits)))
          (Nat
            (digits))))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (ArrayExpression
        (AtomExpression
          (Ident
            (ident)))
        (CoercionExpression
          (AtomExpression
            (Nat
              (digits)))
          (Nat
            (digits))))))
  (Function
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (Ident
      (ident))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (Ident
              (ident))))))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (Ident
          (ident)))
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (MapType
          (Types
            (Type
              (Ident
                (ident))))
          (Type
            (Ident
              (ident))))))
    (ArrayExpression
      (AtomExpression
        (Ident
          (ident)))
      (AtomExpression
        (Ident
          (ident)))
      (ArrayExpression
        (AtomExpression
          (Ident
            (ident)))
        (CoercionExpression
          (AtomExpression
            (Nat
              (digits)))
          (Nat
            (digits))))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (ArrayExpression
        (AtomExpression
          (Ident
            (ident)))
        (CoercionExpression
          (AtomExpression
            (Nat
              (digits)))
          (Nat
            (digits))))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (ArrayExpression
        (AtomExpression
          (Ident
            (ident)))
        (CoercionExpression
          (AtomExpression
            (Nat
              (digits)))
          (Nat
            (digits))))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (ArrayExpression
        (AtomExpression
          (Ident
            (ident)))
        (CoercionExpression
          (AtomExpression
            (Nat
              (digits)))
          (Nat
            (digits))))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (ArrayExpression
        (AtomExpression
          (Ident
            (ident)))
        (CoercionExpression
          (AtomExpression
            (Nat
              (digits)))
          (Nat
            (digits))))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (ArrayExpression
        (AtomExpression
          (Ident
            (ident)))
        (CoercionExpression
          (AtomExpression
            (Nat
              (digits)))
          (Nat
            (digits))))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (ArrayExpression
        (AtomExpression
          (Ident
            (ident)))
        (CoercionExpression
          (AtomExpression
            (Nat
              (digits)))
          (Nat
            (digits))))
      (AtomExpression
        (Ident
          (ident))
        (Expressions
          (AtomExpression
            (Ident
              (ident)))
          (AtomExpression
            (BvLit
              (bvlit)))))
      (ArrayExpression
        (AtomExpression
          (Ident
            (ident)))
        (CoercionExpression
          (AtomExpression
            (Nat
              (digits)))
          (Nat
            (digits))))))
  (Function
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))))
    (Attribute
      (AttributeOrTrigger
        (Ident
          (ident))
        (AttributeParameter
          (AtomExpression
            (string)))))
    (Ident
      (ident))
    (VarOrType
      (Type
        (Ident
          (ident))))
    (VarOrType
      (Type
        (Ident
          (ident)))))
  (Procedure
    (ProcSignature
      (Attribute
        (AttributeOrTrigger
          (Ident
            (ident))))
      (Ident
        (ident))
      (ProcFormals))
    (Spec
      (SpecModifies
        (Idents
          (Ident
            (ident))
          (Ident
            (ident))
          (Ident
            (ident))
          (Ident
            (ident))
          (Ident
            (ident))
          (Ident
            (ident))
          (Ident
            (ident))
          (Ident
            (ident)))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident))))))))))
  (Procedure
    (ProcSignature
      (Attribute
        (AttributeOrTrigger
          (Ident
            (ident))))
      (Ident
        (ident))
      (ProcFormals))
    (Spec
      (SpecModifies
        (Idents
          (Ident
            (ident))
          (Ident
            (ident))
          (Ident
            (ident))
          (Ident
            (ident))
          (Ident
            (ident))
          (Ident
            (ident))
          (Ident
            (ident))
          (Ident
            (ident)))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident)))))))))
    (Spec
      (SpecPrePost
        (Proposition
          (AtomExpression
            (RelationalExpression
              (AtomExpression
                (Ident
                  (ident)))
              (RelOp)
              (AtomExpression
                (AtomExpression
                  (Ident
                    (ident))))))))))
